--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "default_title" : "One click to set your all linkedin Privacy Settings",
     "default_popup": "popup.html"
   },
-  "content_security_policy": "script-src 'self' https://*.googleapis.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://*.googleapis.com https://platform.twitter.com https://connect.facebook.net; object-src 'self'",
   "content_scripts": [
     {
       "matches": ["http://www.linkedin.com/*", "https://www.linkedin.com/*"],
