workable version with jquery sent all requests, show results later; auto load in customize tab ; only problem is the info not quite good, will separate info with sent default results

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
       "js": ["popup.js", "contentscript.js"]
     }
   ],
-  "permissions": [ "tabs", "http://www.linkedin.com/*", "https://www.linkedin.com/*", "https://*.googleapis.com/", "notifications", "webRequest", "webRequestBlocking" ],
+  "permissions": [ "tabs", "http://www.linkedin.com/*", "https://www.linkedin.com/*", "https://*.googleapis.com/", "notifications", "webRequest", "webRequestBlocking", "storage" ],
   "icons" : {
     "48" : "images/icon48.png",
     "128" : "images/icon128.png"
