--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "name" : "One-Click LinkedIn Privacy Settings",
   "version" : "1.0",
-  "description" : "One click to set your all linkedin Privacy Settings",
+  "description" : "One click to set your all LinkedIn Privacy Settings",
   "background": { "scripts": ["background.js", "settings.js"] },
   "page_action" :
   {
     "default_icon" : "images/icon19.png",
-    "default_title" : "One click to set your all linkedin Privacy Settings",
+    "default_title" : "One click to set your all LinkedIn Privacy Settings",
     "default_popup": "popup.html"
   },
-  "content_security_policy": "script-src 'self' https://*.googleapis.com https://platform.twitter.com https://connect.facebook.net; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://platform.twitter.com https://connect.facebook.net; object-src 'self'",
   "content_scripts": [
     {
       "matches": ["http://www.linkedin.com/*", "https://www.linkedin.com/*"],
